# wheel-n-deal

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  TICKETS.md  docker-compose.yml  pyproject.toml  requirements.txt  run_docker.sh  setup_dev.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  celery_app.py  config.py  main.py  models.py  pyproject.toml  wheel_n_deal.db
backend/alembic/: env.py
backend/alembic/versions/: 5ed1a95e1a75_initial_migration.py  aa357c425f66_add_users_table.py  d1ebc3098984_add_user_id_to_products.py
backend/models/: database.py
backend/routers/: auth.py  tracker.py
backend/services/: listener.py  notification.py  scraper.py  signal_parser.py  user_service.py
backend/tasks/: price_check.py
backend/tests/: test_api_endpoints.py  test_auth.py  test_cors.py  test_listener.py  test_models.py  test_monitoring.py  test_notification.py  test_price_check.py  test_scraper.py  test_security.py  test_signal_parser.py  test_tracker.py  test_user_service.py
backend/tests/fixtures/: test_fixtures.py
backend/tests/integration/: conftest.py  test_celery.py  test_endpoints.py
backend/utils/: logging.py  monitoring.py  pricing.py  security.py
docs/: ARCHITECTURE.md  DEPLOYMENT-DEBIAN.md  TICKETS.md
