[tool.poetry]
name = "backend"
version = "0.0.1"
description = "Backend for wheel-n-deal, a package for tracking flash sales and prices across specific items"
authors = ["Jonathan Kirkland <jbkirkland708@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.35"
databases = "^0.9.0"
asyncpg = "^0.29.0"
selenium = "^4.25.0"
celery = "^5.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
pythonpath = "backend"
